<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>diagnostic_common_diagnostics</name>
  <version>0.5.1</version>
  <description>
      Diagnostics that are commonly used.
  </description>
  <maintainer email="jihoon@floatic.io">Jihoon Lee</maintainer>
  <license>Apache License 2.0</license>

  <!-- <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer> -->
  <author>Mikael Argueda</author>
  <author email="esteve@osrfoundation.org">Esteve Fernandez</author>


  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>hddtemp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-psutil</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!--<test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>-->

 <export>
    <build_type>ament_python</build_type>
  </export>

</package>
